# hcc

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  OAT.xml  README.md  SECURITY.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  version.cmake
python/: CMakeLists.txt  setup.py  sys_version.py.in
python/hccl/: __init__.py
python/hccl/manage/: api.py
python/hccl/split/: __init__.py  api.py
src/: CMakeLists.txt
src/algorithm/: CMakeLists.txt
src/algorithm/base/: CMakeLists.txt
src/algorithm/impl/: CMakeLists.txt  alg_configurator.cc  alg_configurator.h  alg_env_config.cc  coll_alg_utils.cc  coll_alg_utils.h  hccl_aiv.cc  hccl_aiv_device.cc  hccl_aiv_host.cc  hccl_alg.cc  hccl_alg_device.cc  topo_matcher.cc  topo_matcher.h
src/algorithm/pub_inc/: alg_cmd_type.h  alg_env_config.h  alg_profiling.h  alltoall_operator.h  coll_alg_operator.h  coll_alg_param.h  common.h  ffts_common_pub.h  hccl_aiv.h  hccl_alg.h  hccl_impl_pub.h  mc2_handler_pub.h  op_context.h  threadManage.h
src/common/: CMakeLists.txt
src/common/error_code/: CMakeLists.txt  error_code.cc
src/common/health/: CMakeLists.txt  calc_crc.cc  calc_crc.h  rank_consistentcy_checker.cc  rank_consistentcy_checker.h
src/common/launch_device/: CMakeLists.txt  launch_device.cc  launch_device.h
src/common/stream/: CMakeLists.txt  stream_utils.cc  stream_utils.h  stream_utils_aicpu.cc
src/framework/: CMakeLists.txt
src/framework/cluster_maintenance/: CMakeLists.txt
src/framework/common/: CMakeLists.txt
src/framework/communicator/: CMakeLists.txt  comm_config.cc  comm_configer.cc  hccl_comm.cc  hccl_comm_device.cc  hccl_comm_host.cc
src/framework/device/: CMakeLists.txt  hccl_aicpu_interface.cc  hccl_aicpu_interface.h  hccl_aicpu_transport_interface.cc  hccl_aicpu_transport_interface.h
src/framework/group/: CMakeLists.txt  hccl_group.cc  hccl_group.h  hccl_group_utils.h
src/framework/hcom/: CMakeLists.txt  hcom.cc  hcom_common.cc  hcom_common.h  hcom_common_v2.h  hcom_device_profiling.cc  hcom_device_profiling.h  hcom_host_profiling.cc  hcom_host_profiling.h  hcom_private.h  hcom_private_v2.h  hcom_pub.h
src/framework/inc/: comm.h  comm_config_pub.h  comm_configer.h  hccl_api_data.h  hccl_comm_pub.h  op_base_pub.h  opexecounter_pub.h  topoinfo_struct.h
src/framework/next/: CMakeLists.txt
src/framework/nslbdp/: CMakeLists.txt  hccl_nslb_md5.cc  hccl_nslb_md5.h  hccl_nslbdp.cc  hccl_nslbdp.h  hccl_nslbdp_pub.h
src/framework/op_base/: CMakeLists.txt
src/hccd/: CMakeLists.txt  hccd.cc  hccd_comm.cc  hccd_comm.h  hccd_impl_pml.cc  hccd_impl_pml.h  hccd_pub.h  hccl_comm_conn.cc  hccl_comm_conn.h  hccl_comm_conn_mgr.cc  hccl_comm_conn_mgr.h  hccl_raw.cc
src/legacy/: CMakeLists.txt
src/legacy/common/: CMakeLists.txt  binary_stream.h  checkcrc.cc  checkcrc.h  const_val.h  ip_address.h  iterator.h  iterator_unconst.h  log.cc  log.h  reduce_in.h  referenced.h  sal.cc  sal.h  stream_utils.cc  stream_utils.h
src/legacy/framework/: CMakeLists.txt  hierarchical_queue.h
src/legacy/include/: hccl_communicator.h  hccl_params_pub.h
src/legacy/interface/: CMakeLists.txt  aicpu_ts_thread_interface.cc  aicpu_ts_thread_interface.h  rank_graph_interface.cc  rank_graph_interface.h
src/legacy/local_build/: format_whole_repo.sh
src/legacy/service/: CMakeLists.txt
src/legacy/unified_platform/: CMakeLists.txt  serializable.h
src/platform/: CMakeLists.txt
src/platform/comm_primitive/: CMakeLists.txt  hccl_dispatcher_ctx.cc  hccl_primitive_local.cc  hccl_primitive_remote.cc
src/platform/common/: CMakeLists.txt  device_capacity.cc  dlhal_function.cc  dlhal_function.h  dlhns_function.cc  dlhns_function.h  dlibv_function.cc  dlibv_function.h  dlprof_func.cc  dlprof_func.h  dlra_function.cc  dlra_function.h  dlrts_function.h  dltdt_function.cc  dltdt_function.h  dltrace_function.cc  dltrace_function.h  externalinput.cc  externalinput.h  hccl_dl.cc  hccl_dl.h  hccl_ip_address.cc  launch_aicpu.cc  launch_aicpu.h  log.cc  mr_manager.cc  peterson_lock.cc  read_write_lock.cc  read_write_lock_base.cc  sal.cc  sal.h  workflow.cc
src/platform/debug/: CMakeLists.txt
src/platform/hccp/: CMakeLists.txt
src/platform/inc/: config_plf_log.h  es_private.h  hccd_private.h  hccl_operator.h  mem_mapping_manager.h  mem_name_repository_pub.h  network_manager_pub.h  op_task.h  operator_param_type.h  private_types.h  spin_mutex.h
src/platform/ping_mesh/: CMakeLists.txt  hccn_rping.cc  ping_mesh.cc  ping_mesh.h
src/platform/remote_access/: CMakeLists.txt  comm_remote_access.cc  comm_remote_access.h  remote_access.cc  remote_access_impl.cc  remote_access_impl.h  transport_remote_access.cc  transport_remote_access.h
src/platform/resource/: CMakeLists.txt
src/platform/task/: CMakeLists.txt  dispatcher.cc  dispatcher_aicpu.cc  dispatcher_aicpu.h  dispatcher_aicpu_pub.h  dispatcher_common.cc  dispatcher_graph.cc  dispatcher_graph.h  dispatcher_graph_pub.h  dispatcher_pub.h  dispatcher_virtural.cc  dispatcher_virtural.h  dispatcher_virtural_pub.h  task_logic_info.cc  task_logic_info.h
src/platform/typical/: CMakeLists.txt  interface_hccl.cc  interface_hccl.h  rdma_resource_manager.cc  rdma_resource_manager.h  send_recv_executor.cc  send_recv_executor.h  typical_mr_manager.cc  typical_mr_manager.h  typical_param_check.h  (+6 more)
src/pub_inc/: adapter_error_manager_pub.h  adapter_hal_pub.h  adapter_hccp_common.h  adapter_pub.h  adapter_rts_common.h  aicpu_operator_pub.h  device_capacity.h  dispatcher.h  dispatcher_task_types.h  externalinput_pub.h  hccl_common.h  hccl_ip_address.h  hccl_mem.h  hccl_mem_defs.h  hccl_network_pub.h  hccl_socket.h  hccl_trace_info.h  hccn_rping.h  hdc_pub.h  heterog_mem_blocks_manager_pub.h  local_notify.h  log.h  mem_device_pub.h  mem_host_pub.h  memory_alloc_ring.h  mr_manager.h  notify_pool.h  p2p_mgmt_pub.h  peterson_lock.h  read_write_lock.h  read_write_lock_base.h  remote_access.h  remote_notify.h  sal_pub.h  stream_pub.h  task_logic_info_pub.h  transport_heterog_def.h  transport_mem.h  transport_pub.h  workflow_pub.h
test/ut/: CMakeLists.txt
(+5087 files in other folders)
